# accent-voice2

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  core-en_US.xml  coverage.toml  deptry.toml  djlint.toml  mkdocs.yml  mypy.ini  mypy.toml  pyproject-backup.toml  pyproject.toml  pyproject2.toml  pytest.ini  refurb.toml  ruff.toml  tox.ini  tree.txt
deploy/: README.md  (+17 more)
service/accent-agentd/: .dockerignore  Dockerfile  README.md  build-docker.sh  pyproject.toml
service/accent-agentd-cli/: README.md  pyproject.toml
service/accent-agentd-cli/accent_agentd_cli/: config.py  main.py
service/accent-agentd/accent_agentd/: bus.py  config.py  dao.py  exception.py  http.py  main.py  queuelog.py  service_discovery.py  wait.py
service/accent-agentd/integration_tests/: Dockerfile-agentd  Makefile
service/accent-agid/: Dockerfile  README.md  pyproject.toml
service/accent-agid/accent_agid/: agid.py  call_rights.py  dialplan_variables.py  fastagi.py  helpers.py  objects.py  schedule.py
service/accent-agid/examples/: accent_fax.conf
service/accent-agid/integration_tests/: Makefile  test-requirements-for-tox.txt
service/accent-amid/: Dockerfile  README.md  pyproject.toml
service/accent-amid/accent_amid/: auth.py  config.py  controller.py  exceptions.py  facade.py  main.py  rest_api.py
service/accent-amid/integration_tests/: Dockerfile  Makefile  test-requirements.txt
service/accent-auth/: .dockerignore  Dockerfile  README.md  pyproject.toml
service/accent-auth-cli/: Dockerfile  README.md  pyproject.toml
service/accent-auth-cli/accent_auth_cli/: config.py  helpers.py  main.py
service/accent-auth-conversion/: bandit.yaml  pyproject.toml  ruff.toml
service/accent-auth-conversion/.devcontainer/: devcontainer.json
service/accent-auth-conversion/accent_auth/: flask_helpers.py  helpers.py  http.py  http_server.py  main.py  purpose.py  schemas.py  token.py  wait.py
service/accent-auth-conversion/integration_tests/: Dockerfile-auth-test  test-requirements-for-tox.txt
service/accent-auth-conversion/templates/: email_confirmation.jinja
service/accent-auth/accent_auth/: __init__.py  bootstrap.py  bus.py  config.py  controller.py  exceptions.py  init_db.py  interfaces.py  purpose.py  service_discovery.py  slug.py  token.py
service/accent-auth/integration_tests/: Makefile
service/accent-auth/templates/: password_reset_email.jinja
service/accent-call-logd/: Dockerfile  Dockerfile-debug  README.md  build-docker-debug.sh  pyproject.toml
service/accent-call-logd/accent_call_logd/: auth.py  bus.py  cel_interpretor.py  celery.py  config.py  controller.py  datatypes.py  email.py  exceptions.py  extension_filter.py  generator.py  http.py  http_server.py  init_db.py  main.py  main_sweep.py  manager.py  participant.py  purger.py  raw_call_log.py  sync_db.py  writer.py
service/accent-call-logd/integration_tests/: Makefile  test-requirements-for-tox.txt
service/accent-calld/: Dockerfile  Dockerfile-debug  README.md  pyproject.toml
service/accent-calld/accent_calld/: __init__.py  ari_.py  asyncio_.py  auth.py  bus.py  collectd.py  config.py  controller.py  exceptions.py  http.py  http_server.py  main.py  phoned.py  service_discovery.py  types.py
service/accent-calld/integration_tests/: Makefile  setup.py  test-requirements.txt
service/accent-certs/: pyproject.toml
service/accent-chatd/: Dockerfile  README.md  pyproject.toml
service/accent-chatd/accent_chatd/: asyncio_.py  auth.py  bus.py  config.py  controller.py  exceptions.py  http_server.py  init_db.py  logging.conf  main.py  thread_manager.py
service/accent-chatd/alembic/: env.py
service/accent-chatd/integration_tests/: Dockerfile-chatd  Makefile  test-requirements-for-tox.txt
service/accent-confd/: Dockerfile  README.md  pyproject.toml
service/accent-confd-cli/: Dockerfile  README.md  pyproject.toml
service/accent-confd-cli/accent_confd_cli/: config.py  helpers.py  main.py
service/accent-confd/accent_confd/: __init__.py  _bus.py  _sysconfd.py  auth.py  config.py  controller.py  http_server.py  main.py  middleware.py  purge_meetings.py  service_discovery.py  sync_db.py  wait.py
service/accent-confd/integration_tests/: Dockerfile  Makefile  README.md  setup.py  test-requirements.txt
service/accent-confgend/: Dockerfile  MANIFEST.in  README.md  pyproject.toml
service/accent-confgend/accent_confgend/: accent.py  asterisk.py  cache.py  confgen.py  config.py  handler.py  phoned.py  template.py
service/accent-confgend/integration_tests/: Makefile
service/accent-confgend/tests/: flatten_asterisk_conf.py
service/accent-debug/: .dockerignore  README.md  pyproject.toml  setup.py
service/accent-debug/accent_debug/: access.py  capture.py  collect.py  config.py  http_request_duration.py  main.py  public_ip.py
service/accent-dird/: Dockerfile  README.md  pyproject.toml
service/accent-dird/accent_dird/: __init__.py  auth.py  bus.py  config.py  controller.py  exception.py  helpers.py  http.py  http_server.py  main.py  plugin_manager.py  schemas.py  service_discovery.py  source_manager.py
service/accent-export-import/: README.md  pyproject.toml
service/accent-manage-db/: Dockerfile  Dockerfile-backup  README.md  alembic.ini  poetry.dockerfile  pyproject.toml
service/accent-plugind/: Dockerfile  build-docker.sh  pyproject.toml
service/accent-plugind-cli/: README.md  pyproject.toml
service/accent-prometheus-exporter-plugin/: README.md  pyproject.toml
service/accent-provd/: Dockerfile  README.md  pyproject.toml
service/accent-provd-cli/: README.md  pyproject.toml
service/accent-provd-plugins/: README.md  pyproject.toml
service/accent-purge-db/: Dockerfile  README.md  pyproject.toml
service/accent-service/: Dockerfile  pyproject.toml
service/accent-setupd/: Dockerfile  pyproject.toml
service/accent-stat/: README.md  pyproject.toml
service/accent-ui/: .dockerignore  Dockerfile  Dockerfile-backup  MANIFEST.in  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  ui-restart.sh  vite.config.js  webpack.config.js
(+4492 files in other folders)
