[project]
name = "accent-voice-2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "tox>=4.0.0",
    "mypy>=1.8.0",
    "refurb>=0.4.0",
    "deptry>=0.12.0",
    "bandit>=1.7.5",
    "djlint>=1.30.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocstrings[python]>=0.28.2",
]
