[project]
name = "accent-voice-2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.10",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "tox>=4.0.0",
    "mypy>=1.8.0",
    "refurb>=0.4.0",
    "deptry>=0.12.0",
    "bandit>=1.7.5",
    "djlint>=1.30.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.7",
    "mkdocstrings[python]>=0.28.2",
]

[tool.uv.workspace]
members = [
    "library/accent-agentd-client",
    "library/accent-amid-client",
    "library/accent-applicationd-client",
    "library/accent-asterisk-doc-extractor",
    "library/accent-asyncio-ari-client",
    "library/accent-auth-client",
    "library/accent-auth-keys",
    "library/accent-bus",
    "library/accent-call-logd-client",
    "library/accent-calld-client",
    "library/accent-chatd-client",
    "library/accent-confd-client",
    "library/accent-confgend-client",
    "library/accent-config",
    "library/accent-dao",
    "library/accent-deployd-client",
    "library/accent-dird-client",
    "library/accent-fetchfw",
    "library/accent-lib-python",
    "library/accent-lib-rest-client",
    "library/accent-market-client",
    "library/accent-plugind-client",
    "library/accent-provd-client",
    "library/accent-setupd-client",
    "library/accent-test-helpers",
    "library/accent-uuid",
    "library/accent-webhookd-client",
    "library/accent-websocketd-client",
    "library/ari-py",
    "library/swagger-py"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
