[project]
name = "accent-agentd-cli"
version = "0.1.0"
description = "CLI program to interact with a accent-agentd server"
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "stevedore>=5.4.1",
  "accent",
  "accent-agentd-client",
]

[project.scripts]
accent-agentd-cli = "accent-agentd-cli.main:main"

[project.entry-points]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent = { workspace = true }
accent-agentd-client = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
