[project]
name = "accent-agentd"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9,<4.0"
dependencies = [
  "cheroot>=8.5.2,<9",
  "flask>=1.1.2,<2",
  "Flask-Cors>=3.0.9,<4",
  "Flask-RESTful>=0.3.8,<0.4",
  "itsdangerous>=1.1.0,<2",
  "Jinja2>=2.11.3,<3",
  "kombu>=5.0.2,<6",
  "netifaces>=0.10.9,<0.11",
  "psycopg2>=2.8.6,<3",
  "python-consul>=1.1.0,<2",
  "PyYAML>=5.3.1,<6",
  "requests>=2.25.1,<3",
  "SQLAlchemy>=1.3.0, <1.4.0",
  "Unidecode>=1.2.0,<2",
  "werkzeug>=1.0.1,<2",
  "marshmallow>=3.10.0,<4",
  "markupsafe>=1.1.1,<2",
  "accent-lib-rest-client",
  "accent-amid-client",
  "accent-auth-client",
  "accent-bus",
  "accent-dao",
  "accent",
]

[project.scripts]
accent-agentd = "accent_agentd.main:main"
accent-agentd-wait = "accent_agentd.wait:main"

[project.entry-points."accent_agentd.plugins"]
agents = "accent_agentd.plugins.agents.plugin:Plugin"
agent = "accent_agentd.plugins.agent.plugin:Plugin"
api = "accent_agentd.plugins.api.plugin:Plugin"
status = "accent_agentd.plugins.status.plugin:Plugin"

[dependency-groups]
dev = [
  "commitizen>=3.10.0,<4",
  "dunamai>=1.18.1,<2",
  "pytest>=7.2.0,<8",
  "pytest-cov>=4.0.0,<5",
  "deptry>=0.6.4,<0.7",
  "tox>=3.25.1,<4",
]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-amid-client = { path = "../../library/accent-amid-client" }
accent-auth-client = { path = "../../library/accent-auth-client" }
accent-bus = { path = "../../library/accent-bus" }
accent-dao = { path = "../../library/accent-dao" }
accent = { path = "../../library/accent-lib-python" }

[tool.hatch.build.targets.sdist]
include = ["accent_agentd", "accent_agentd/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_agentd", "accent_agentd/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT", # flake8-2020
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "SIM", # flake8-simplify
  "I",   # isort
  "C90", # mccabe
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "PGH", # pygrep-hooks
  "UP",  # pyupgrade
  "RUF", # ruff
  "TRY", # tryceratops
]

ignore = [
  "E501", # LineTooLong
  "E731", # DoNotAssignLambda
  "E203", # Whitespace before ':'
  "W503", # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]
