[project]
name = "accent-agentd"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "cheroot>=8.5.2",
  "flask>=1.1.2",
  "Flask-Cors>=3.0.9",
  "Flask-RESTful>=0.3.8",
  "itsdangerous>=1.1.0",
  "Jinja2>=3.1.6",
  "kombu>=5.0.2",
  "netifaces2",
  "psycopg",
  "python-consul>=1.1.0",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "sqlalchemy[asyncio]>=2.0.0",
  "Unidecode>=1.2.0",
  "werkzeug>=1.0.1",
  "marshmallow>=3.10.0",
  "markupsafe>=1.1.1",
  "accent-lib-rest-client",
  "accent-amid-client",
  "accent-auth-client",
  "accent-bus",
  "accent-dao",
  "accent",
]

[project.scripts]
accent-agentd = "accent_agentd.main:main"
accent-agentd-wait = "accent_agentd.wait:main"

[project.entry-points."accent_agentd.plugins"]
agents = "accent_agentd.plugins.agents.plugin:Plugin"
agent = "accent_agentd.plugins.agent.plugin:Plugin"
api = "accent_agentd.plugins.api.plugin:Plugin"
status = "accent_agentd.plugins.status.plugin:Plugin"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-amid-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-bus = { workspace = true }
accent-dao = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_agentd", "accent_agentd/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_agentd", "accent_agentd/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
