[project]
name = "accent-agid"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9,<4.0"
dependencies = [
  "phonenumbers>=8.12.1,<9",
  "psycopg2>=2.8.6,<3",
  "pytz~=2023.3.post1",
  "PyYAML>=5.3.1,<6",
  "requests>=2.25.1,<3",
  "SQLAlchemy>=1.3.0, <1.4.0",
  "stevedore>=4.0.2,<5",
  "Unidecode>=1.2.0,<2",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent-calld-client",
  "accent-confd-client",
  "accent-dao",
  "accent-dird-client",
  "accent",
  "accent-agentd-client",
]

[project.scripts]
accent-agid = "accent_agid.bin.agid:main"
change-pass-vm = "accent_agid.bin.change_pass_vm:main"

[project.entry-points]

[dependency-groups]
dev = [
  "commitizen>=3.10.0,<4",
  "dunamai>=1.18.1,<2",
  "pytest>=7.2.0,<8",
  "pytest-cov>=4.0.0,<5",
  "deptry>=0.6.4,<0.7",
  "tox>=3.25.1,<4",
  "accent-test-helpers",
]

[tool.uv.sources]
accent-test-helpers = { path = "../../library/accent-test-helpers" }
accent-lib-rest-client = { workspace = true }
accent-auth-client = { path = "../../library/accent-auth-client" }
accent-calld-client = { path = "../../library/accent-calld-client" }
accent-confd-client = { path = "../../library/accent-confd-client" }
accent-dao = { path = "../../library/accent-dao" }
accent-dird-client = { path = "../../library/accent-dird-client" }
accent = { path = "../../library/accent-lib-python" }
accent-agentd-client = { path = "../../library/accent-agentd-client" }

[tool.hatch.build.targets.sdist]
include = ["accent_agid"]

[tool.hatch.build.targets.wheel]
include = ["accent_agid"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT", # flake8-2020
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "SIM", # flake8-simplify
  "I",   # isort
  "C90", # mccabe
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "PGH", # pygrep-hooks
  "UP",  # pyupgrade
  "RUF", # ruff
  "TRY", # tryceratops
]

ignore = [
  "E501", # LineTooLong
  "E731", # DoNotAssignLambda
  "E203", # Whitespace before ':'
  "W503", # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]
