[project]
name = "accent-agid"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "phonenumbers>=8.12.1",
  "psycopg",
  "pytz~=2023.3.post1",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "sqlalchemy[asyncio]>=2.0.0",
  "stevedore>=5.4.1",
  "Unidecode>=1.2.0",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent-calld-client",
  "accent-confd-client",
  "accent-dao",
  "accent-dird-client",
  "accent",
  "accent-agentd-client",
]

[project.scripts]
accent-agid = "accent_agid.bin.agid:main"
change-pass-vm = "accent_agid.bin.change_pass_vm:main"

[project.entry-points]

[dependency-groups]
dev = ["pytest>=8.3.5", "accent-test-helpers"]

[tool.uv.sources]
accent-test-helpers = { workspace = true }
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent-calld-client = { workspace = true }
accent-confd-client = { workspace = true }
accent-dao = { workspace = true }
accent-dird-client = { workspace = true }
accent = { workspace = true }
accent-agentd-client = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_agid"]

[tool.hatch.build.targets.wheel]
include = ["accent_agid"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
