[project]
name = "accent-amid"
version = "0.1.0"
description = "Daemon for interacting with Asterisk's AMI"
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9,<4.0"
dependencies = [
  "cheroot>=8.5.2,<9",
  "flask>=1.1.2,<2",
  "Flask-Cors>=3.0.9,<4",
  "Flask-RESTful>=0.3.8,<0.4",
  "itsdangerous>=1.1.0,<2",
  "Jinja2>=2.11.3,<3",
  "jsonpatch~=1.25",
  "kombu>=5.0.2,<6",
  "markupsafe>=1.1.1,<2",
  "marshmallow>=3.10.0,<4",
  "PyYAML>=5.3.1,<6",
  "requests>=2.25.1,<3",
  "werkzeug>=1.0.1,<2",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent",
  "accent-bus",
]

[project.scripts]
accent-amid = "accent_amid.bin.daemon:main"

[project.entry-points."accent_amid.plugins"]
api = "accent_amid.plugins.api.plugin:Plugin"
actions = "accent_amid.plugins.actions.plugin:Plugin"
commands = "accent_amid.plugins.commands.plugin:Plugin"
config = "accent_amid.plugins.config.plugin:Plugin"
status = "accent_amid.plugins.status.plugin:Plugin"

[dependency-groups]
dev = [
  "commitizen>=3.10.0,<4",
  "dunamai>=1.18.1,<2",
  "pytest>=7.2.0,<8",
  "pytest-cov>=4.0.0,<5",
  "deptry>=0.6.4,<0.7",
  "tox>=3.25.1,<4",
]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-auth-client = { path = "../../library/accent-auth-client" }
accent = { path = "../../library/accent-lib-python" }
accent-bus = { path = "../../library/accent-bus" }

[tool.hatch.build.targets.sdist]
include = ["accent_amid", "accent_amid/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_amid", "accent_amid/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 99
fix = true

[tool.ruff.lint]
select = [
  "YTT", # flake8-2020
  "S",   # flake8-bandit
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "T10", # flake8-debugger
  "SIM", # flake8-simplify
  "I",   # isort
  "C90", # mccabe
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "PGH", # pygrep-hooks
  "UP",  # pyupgrade
  "RUF", # ruff
  "TRY", # tryceratops
]

ignore = [
  "E501", # LineTooLong
  "E731", # DoNotAssignLambda
  "E203", # Whitespace before ':'
  "W503", # Line break before binary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["UPDATE"]
