[project]
name = "accent-amid"
version = "0.1.0"
description = "Daemon for interacting with Asterisk's AMI"
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "cheroot>=8.5.2",
  "flask>=1.1.2",
  "Flask-Cors>=3.0.9",
  "Flask-RESTful>=0.3.8",
  "itsdangerous>=1.1.0",
  "Jinja2>=2.11.3",
  "jsonpatch~=1.25",
  "kombu>=5.0.2",
  "markupsafe>=1.1.1",
  "marshmallow>=3.10.0",
  "pyyaml>=6.0",
  "requests>=2.25.1",
  "werkzeug>=1.0.1",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent",
  "accent-bus",
]

[project.scripts]
accent-amid = "accent_amid.bin.daemon:main"

[project.entry-points."accent_amid.plugins"]
api = "accent_amid.plugins.api.plugin:Plugin"
actions = "accent_amid.plugins.actions.plugin:Plugin"
commands = "accent_amid.plugins.commands.plugin:Plugin"
config = "accent_amid.plugins.config.plugin:Plugin"
status = "accent_amid.plugins.status.plugin:Plugin"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent = { workspace = true }
accent-bus = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_amid", "accent_amid/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_amid", "accent_amid/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
