[project]
name = "accent-amid"
version = "0.1.0"
description = "Daemon for interacting with Asterisk's AMI"
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.11"
dependencies = [
  "accent-auth-client",
  "accent-bus",
  "accent-lib-rest-client",
  "accent",
  "fastapi[standard]>=0.115.11",
  "pydantic-settings>=2.8.1",
  "pydantic>=2.10.6",
  "uvicorn[standard]>=0.34.0",
]

[project.scripts]
accent-amid = "accent_amid.bin.daemon:main"

[project.entry-points."accent_amid.plugins"]
api = "accent_amid.plugins.api.plugin:Plugin"
actions = "accent_amid.plugins.actions.plugin:Plugin"
commands = "accent_amid.plugins.commands.plugin:Plugin"
config = "accent_amid.plugins.config.plugin:Plugin"
status = "accent_amid.plugins.status.plugin:Plugin"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent = { workspace = true }
accent-bus = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_amid", "accent_amid/plugins/*/api.yml"]

[tool.hatch.build.targets.wheel]
include = ["accent_amid", "accent_amid/plugins/*/api.yml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
