[project]
name = "accent-auth-cli"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "cliff>=3.10.1",
  "requests>=2.25.1",
  "pyyaml>=6.0",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent",
]

[project.scripts]
accent-auth-cli = "accent_auth_cli.main:main"

[project.entry-points."accent_auth_cli.commands"]
group_add = "accent_auth_cli.commands.group:GroupAdd"
group_create = "accent_auth_cli.commands.group:GroupCreate"
group_delete = "accent_auth_cli.commands.group:GroupDelete"
group_list = "accent_auth_cli.commands.group:GroupList"
group_remove = "accent_auth_cli.commands.group:GroupRemove"
group_show = "accent_auth_cli.commands.group:GroupShow"
ldap_config_delete = "accent_auth_cli.commands.ldap_config:LDAPConfigDelete"
ldap_config_show = "accent_auth_cli.commands.ldap_config:LDAPConfigShow"
ldap_config_update = "accent_auth_cli.commands.ldap_config:LDAPConfigUpdate"
policy_create = "accent_auth_cli.commands.policy:PolicyCreate"
policy_delete = "accent_auth_cli.commands.policy:PolicyDelete"
policy_list = "accent_auth_cli.commands.policy:PolicyList"
policy_show = "accent_auth_cli.commands.policy:PolicyShow"
session_delete = "accent_auth_cli.commands.session:SessionDelete"
session_list = "accent_auth_cli.commands.session:SessionList"
session_show = "accent_auth_cli.commands.session:SessionShow"
session_wipe = "accent_auth_cli.commands.session:SessionWipe"
tenant_add = "accent_auth_cli.commands.tenant:TenantAdd"
tenant_create = "accent_auth_cli.commands.tenant:TenantCreate"
tenant_delete = "accent_auth_cli.commands.tenant:TenantDelete"
tenant_list = "accent_auth_cli.commands.tenant:TenantList"
tenant_remove = "accent_auth_cli.commands.tenant:TenantRemove"
tenant_show = "accent_auth_cli.commands.tenant:TenantShow"
token_create = "accent_auth_cli.commands.token:TokenCreate"
token_refresh_delete = "accent_auth_cli.commands.token:RefreshTokenDelete"
token_refresh_list = "accent_auth_cli.commands.token:RefreshTokenList"
token_revoke = "accent_auth_cli.commands.token:TokenRevoke"
token_show = "accent_auth_cli.commands.token:TokenShow"
user_add = "accent_auth_cli.commands.user:UserAdd"
user_create = "accent_auth_cli.commands.user:UserCreate"
user_delete = "accent_auth_cli.commands.user:UserDelete"
user_list = "accent_auth_cli.commands.user:UserList"
user_password = "accent_auth_cli.commands.user:UserSetPassword"
user_remove = "accent_auth_cli.commands.user:UserRemove"
user_show = "accent_auth_cli.commands.user:UserShow"
user_update = "accent_auth_cli.commands.user:UserUpdate"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.uv.sources]
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = ["accent_auth_cli"]

[tool.hatch.build.targets.wheel]
include = ["accent_auth_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
