[project]
name = "accent-auth"
version = "0.1.0"
description = ""
authors = [{name = "Ryan Clark", email = "ryanc@accentservices.com"}]
requires-python = ">=3.11"

dependencies = [
    "alembic>=1.13.0",
    "cheroot>=8.5.2",
    "flask>=1.1.2",
    "Flask-Cors>=3.0.10",
    "Flask-HTTPAuth>=4.5.0",
    "Flask-RESTful>=0.3.8",
    "itsdangerous>=1.1.0",
    "Jinja2>=2.11.3",
    "jsonpatch>=1.25",
    "kombu>=5.0.2",
    "markupsafe>=1.1.1",
    "marshmallow>=3.10.0",
    "netifaces>=0.10.9",
    "psycopg2>=2.8.6",
    "pysaml2>=7.5.0",
    "python-consul>=1.1.0",
    "python-ldap>=3.4.0",
    "PyYAML>=5.3.1",
    "requests>=2.25.1",
    "requests-oauthlib>=1.3.1",
    "SQLAlchemy>=1.3.0,<1.4.0",
    "stevedore>=4.0.2",
    "tenacity>=8.0.1",
    "Unidecode>=1.2.0",
    "websocket-client>=1.3.2",
    "werkzeug>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "tox>=4.0.0",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "refurb>=0.4.0",
    "deptry>=0.12.0",
    "bandit>=1.7.5",
    "djlint>=1.30.0",
]


[tool.hatch.build.targets.sdist]
include = [
    "accent_auth",
    "accent_auth/plugins/http/*/api.yml",
    "accent_auth/plugins/external_auth/*/api.yml"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

