[project]
name = "accent-auth"
version = "0.1.0"
description = ""
authors = [{ name = "Ryan Clark", email = "ryanc@accentservices.com" }]
requires-python = ">=3.9"
dependencies = [
  "accent-bus",
  "accent-dao",
  "accent-lib-rest-client",
  "accent-auth-client",
  "accent",
]

[project.scripts]
accent-auth = "accent_auth.main:main"
accent-auth-bootstrap = "accent_auth.bootstrap:main"
accent-auth-init-db = "accent_auth.init_db:main"
accent-auth-upgrade-db = "accent_auth.main:upgrade_db"
accent-auth-wait = "accent_auth.wait:main"

[project.entry-points."accent_auth.backends"]
accent_user = "accent_auth.plugins.backends.accent_user:AccentUser"
ldap_user = "accent_auth.plugins.backends.ldap_user:LDAPUser"
broken_init = "accent_auth.plugins.backends.broken:BrokenInitBackend"
broken_verify_password = "accent_auth.plugins.backends.broken:BrokenVerifyPasswordBackend"

[project.entry-points."accent_auth.http"]
api = "accent_auth.plugins.http.api.plugin:Plugin"
backends = "accent_auth.plugins.http.backends.plugin:Plugin"
config = "accent_auth.plugins.http.config.plugin:Plugin"
email_confirm = "accent_auth.plugins.http.email_confirm.plugin:Plugin"
external = "accent_auth.plugins.http.external.plugin:Plugin"
group_policy = "accent_auth.plugins.http.group_policy.plugin:Plugin"
groups = "accent_auth.plugins.http.groups.plugin:Plugin"
idp = "accent_auth.plugins.http.idp.plugin:Plugin"
ldap_config = "accent_auth.plugins.http.ldap_config.plugin:Plugin"
password_reset = "accent_auth.plugins.http.password_reset.plugin:Plugin"
policies = "accent_auth.plugins.http.policies.plugin:Plugin"
saml = "accent_auth.plugins.http.saml.plugin:Plugin"
saml_config = "accent_auth.plugins.http.saml_config.plugin:Plugin"
sessions = "accent_auth.plugins.http.sessions.plugin:Plugin"
status = "accent_auth.plugins.http.status.plugin:Plugin"
tenants = "accent_auth.plugins.http.tenants.plugin:Plugin"
tokens = "accent_auth.plugins.http.tokens.plugin:Plugin"
user_email = "accent_auth.plugins.http.user_email.plugin:Plugin"
user_group = "accent_auth.plugins.http.user_group.plugin:Plugin"
user_policy = "accent_auth.plugins.http.user_policy.plugin:Plugin"
user_registration = "accent_auth.plugins.http.user_registration.plugin:Plugin"
user_session = "accent_auth.plugins.http.user_session.plugin:Plugin"
users = "accent_auth.plugins.http.users.plugin:Plugin"

[project.entry-points."accent_auth.external_auth"]
google = "accent_auth.plugins.external_auth.google.plugin:GooglePlugin"
microsoft = "accent_auth.plugins.external_auth.microsoft.plugin:MicrosoftPlugin"
mobile = "accent_auth.plugins.external_auth.mobile.plugin:Plugin"

[project.entry-points."accent_auth.metadata"]
default_user = "accent_auth.plugins.metadata.default_user:DefaultUser"
default_internal = "accent_auth.plugins.metadata.default_internal:DefaultInternal"
default_external_api = "accent_auth.plugins.metadata.default_external_api:DefaultExternalAPI"
user_admin_status = "accent_auth.plugins.metadata.user_admin_status:UserAdminStatus"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "accent-test-helpers",
  "ruff>=0.9.10",
]

[tool.uv.sources]
accent-test-helpers = { workspace = true }
accent-bus = { workspace = true }
accent-dao = { workspace = true }
accent-lib-rest-client = { workspace = true }
accent-auth-client = { workspace = true }
accent = { workspace = true }

[tool.hatch.build.targets.sdist]
include = [
  "accent_auth",
  "accent_auth/plugins/http/*/api.yml",
  "accent_auth/plugins/external_auth/*/api.yml",
]

[tool.hatch.build.targets.wheel]
include = [
  "accent_auth",
  "accent_auth/plugins/http/*/api.yml",
  "accent_auth/plugins/external_auth/*/api.yml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
